# code-starters

./: .gitignore  .gitmodules  README.md  new-project.sh
cpp-app/: .gitignore  .vimspector.json  CMakeLists.txt  Makefile  README.md
cpp-app/docs/: README.md
cpp-app/src/libs/lib1/: CMakeLists.txt
cpp-app/src/libs/lib1/lib1/namespace1/: add.cpp  add.hpp
cpp-app/src/libs/lib1/lib1/namespace2/: subtract.cpp  subtract.hpp
cpp-app/src/libs/lib2/: CMakeLists.txt
cpp-app/src/libs/lib2/lib2/: hello.cpp
cpp-app/src/project_name/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
cpp-app/tests/: CMakeLists.txt  test-1.cpp  test-2.cpp
cpp-app/tests/data/: README.md
cpp-lib/: .vimspector.json  CMakeLists.txt  LICENSE.txt  Makefile  README.md
cpp-lib/examples/example1/: CMakeLists.txt  main.cpp
cpp-lib/examples/example2/: CMakeLists.txt  main.cpp
cpp-lib/include/project_name/: file1.hpp  file2.hpp
cpp-lib/src/: CMakeLists.txt
cpp-lib/src/project_name/folder1/: file1.cpp  file2.cpp
cpp-lib/src/project_name/folder2/: file3.cpp  file3.hpp
cpp-lib/src/project_name/namespace1/: add.cpp  add.hpp
cpp-lib/src/project_name/namespace2/: subtract.cpp  subtract.hpp
cpp-lib/tests/: CMakeLists.txt  main.cpp  test-1.cpp  test-2.cpp
latex-article/: .gitignore  Makefile  article.tex  main.tex  mybib.bib
latex-article/data/: data.txt
latex-article/documents/: Authors statement.odt  Highlights.odt  Makefile  cover-letter.tex  response-reviewers.tex
latex-article/plots/: Makefile  plot1.tex
latex-article/sections/: conclusion.tex  introduction.tex  list-symbols.tex  section2.tex  section3.tex
latex-notes/: .gitignore  Makefile  notes.tex  preamble.sty
latex-notes/snippets/: hello.cpp
python/: Makefile  README.md  setup.py
python/docs/: README.txt
python/examples/: example1.py
python/src/mypackage/: module2.py
python/src/mypackage/subpackage1/: module1.py
python/tests/: test_1.py
